--- a/pokedex-app/src/_styles/styles.css
+++ b/pokedex-app/src/_styles/styles.css
@@ -25,6 +25,7 @@
   --white: #ffffff;
   --background: #f7f7f7;
   /* Font */
+  --font-size-xs: 0.5rem;
   --font-size-s: 0.625rem;
   --font-size-m: 0.75rem;
   --font-size-l: 0.875rem;
@@ -46,17 +47,22 @@ body {
 }
 
 .card-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 18.75rem;
   height: 25rem;
   background-color: var(--grass);
   border-radius: var(--small);
 }
 .card-title {
+  font-weight: bold;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   padding: var(--mini);
+  /*Revisar margin*/
 }
 
 .pokemon-name {
@@ -64,6 +70,71 @@ body {
   color: var(--white);
 }
 .pokemon-number {
-  font-size: var(--font-size-m);
   color: var(--white);
+}
+.card-info {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: end;
+  align-items: center;
+  background-color: var(--background);
+  border-radius: 0.5rem;
+  margin: 0 0.3rem 0.3rem 0.3rem;
+  height: 15rem;
+  font-weight: bold;
+}
+.pokemon-type-container {
+  display: flex;
+}
+.pokemon-type {
+  margin: 0 0.75rem;
+  background-color: var(--grass);
+  border-radius: 0.625rem;
+  color: var(--white);
+  padding: 0.125rem 0.6rem;
+  font-size: var(--font-size-m);
+}
+.about {
+  color: var(--grass);
+  font-size: var(--font-size-l);
+}
+.text-info {
+  font-weight: normal;
+  font-size: var(--font-size-m);
+  text-align: justify;
+  padding: 0 1.25rem 0.5rem 1.25rem;
+}
+.pokemon-features {
+  display: flex;
+}
+
+.pokemon-features > * {
+  padding: 0 0.6rem;
+  font-weight: normal;
+  font-size: var(--font-size-l);
+}
+.pokemon-weight {
+  box-sizing: border-box;
+  border-right: 1px solid var(--light-gray);
+}
+.card-measure {
+  display: flex;
+  align-items: center;
+}
+.card-measure > * {
+  padding: 0 0.3rem;
+  margin-bottom: 0.5rem;
+}
+.feature-description-tag {
+  font-size: var(--font-size-m);
+  text-align: center;
+  color: var(--medium-gray);
+}
+.feature-icon {
+  object-fit: contain;
+}
+.pokemon-img {
+  position: absolute;
+  margin: 3.5rem 4.7rem 12.125rem 4.7rem;
 }
