--- a/pokedex-app/src/_styles/styles.css
+++ b/pokedex-app/src/_styles/styles.css
@@ -46,7 +46,7 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-.card-container {
+.card__container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -55,7 +55,7 @@ body {
   background-color: var(--grass);
   border-radius: var(--small);
 }
-.card-title {
+.card__title {
   font-weight: bold;
   display: flex;
   justify-content: space-between;
@@ -65,14 +65,15 @@ body {
   /*Revisar margin*/
 }
 
-.pokemon-name {
+.pokemon__name {
   font-size: var(--font-size-xl);
   color: var(--white);
 }
-.pokemon-number {
+.pokemon__number {
   color: var(--white);
 }
-.card-info {
+.card__info {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -84,10 +85,21 @@ body {
   height: 15rem;
   font-weight: bold;
 }
-.pokemon-type-container {
+.img__container {
+  position: absolute;
+  /* TODO modificar este top */
+  top: -75px;
+  width: 150px;
+}
+.pokemon__img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.pokemon__type__container {
   display: flex;
 }
-.pokemon-type {
+.pokemon__type {
   margin: 0 0.75rem;
   background-color: var(--grass);
   border-radius: 0.625rem;
@@ -99,42 +111,38 @@ body {
   color: var(--grass);
   font-size: var(--font-size-l);
 }
-.text-info {
+.text__info {
   font-weight: normal;
   font-size: var(--font-size-m);
   text-align: justify;
   padding: 0 1.25rem 0.5rem 1.25rem;
 }
-.pokemon-features {
+.pokemon__features {
   display: flex;
 }
 
-.pokemon-features > * {
+.pokemon__features > * {
   padding: 0 0.6rem;
   font-weight: normal;
   font-size: var(--font-size-l);
 }
-.pokemon-weight {
+.pokemon__weight {
   box-sizing: border-box;
   border-right: 1px solid var(--light-gray);
 }
-.card-measure {
+.card__measure {
   display: flex;
   align-items: center;
 }
-.card-measure > * {
+.card__measure > * {
   padding: 0 0.3rem;
   margin-bottom: 0.5rem;
 }
-.feature-description-tag {
+.feature__description__tag {
   font-size: var(--font-size-m);
   text-align: center;
   color: var(--medium-gray);
 }
-.feature-icon {
+.feature__icon {
   object-fit: contain;
-}
-.pokemon-img {
-  position: absolute;
-  margin: 3.5rem 4.7rem 12.125rem 4.7rem;
 }
