--- a/pokedex-app/src/_styles/styles.css
+++ b/pokedex-app/src/_styles/styles.css
@@ -56,22 +56,25 @@ body {
   border-radius: var(--small);
 }
 .card__title {
-  font-weight: bold;
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   padding: var(--mini);
+
+  font-weight: bold;
+
   /*Revisar margin*/
 }
 
-.pokemon__name {
+.card__pokemon-name {
   font-size: var(--font-size-xl);
   color: var(--white);
 }
-.pokemon__number {
+
+.card__pokemon-number {
   color: var(--white);
 }
+
 .card__info {
   position: relative;
   display: flex;
@@ -79,27 +82,30 @@ body {
   gap: 1rem;
   justify-content: end;
   align-items: center;
+
   background-color: var(--background);
   border-radius: 0.5rem;
   margin: 0 0.3rem 0.3rem 0.3rem;
   height: 15rem;
+
   font-weight: bold;
 }
-.img__container {
+
+.card__img__container {
   position: absolute;
   /* TODO modificar este top */
-  top: -75px;
-  width: 150px;
+  top: -100px;
+  width: 9.375rem;
 }
-.pokemon__img {
+.card__pokemon__img {
   display: block;
   width: 100%;
   height: auto;
 }
-.pokemon__type__container {
+.card__pokemon__type__container {
   display: flex;
 }
-.pokemon__type {
+.card__pokemon__type {
   margin: 0 0.75rem;
   background-color: var(--grass);
   border-radius: 0.625rem;
@@ -111,38 +117,47 @@ body {
   color: var(--grass);
   font-size: var(--font-size-l);
 }
-.text__info {
+.card__text__info {
   font-weight: normal;
   font-size: var(--font-size-m);
   text-align: justify;
   padding: 0 1.25rem 0.5rem 1.25rem;
 }
-.pokemon__features {
+.card__pokemon__features__container {
   display: flex;
 }
 
-.pokemon__features > * {
+.card__pokemon__features__container > * {
   padding: 0 0.6rem;
+
   font-weight: normal;
   font-size: var(--font-size-l);
 }
-.pokemon__weight {
+.card__pokemon__feature-weight {
   box-sizing: border-box;
   border-right: 1px solid var(--light-gray);
 }
-.card__measure {
+.card__feature__height_container {
   display: flex;
   align-items: center;
 }
-.card__measure > * {
+.card__feature__weight_container {
+  display: flex;
+  align-items: center;
+  
+}
+.card__feature__weight_container > * {
   padding: 0 0.3rem;
   margin-bottom: 0.5rem;
 }
-.feature__description__tag {
-  font-size: var(--font-size-m);
+.card__feature__height_container > * {
+  padding: 0 0.3rem;
+  margin-bottom: 0.5rem;
+}
+.card__feature__description__tag {
   text-align: center;
+    font-size: var(--font-size-m);
+
   color: var(--medium-gray);
 }
-.feature__icon {
-  object-fit: contain;
-}
+
