--- a/pokedex-app/src/_styles/styles.css
+++ b/pokedex-app/src/_styles/styles.css
@@ -44,7 +44,49 @@
 body {
   /*Font-family*/
   font-family: "Poppins", sans-serif;
+  height: 100%;
 }
+.main_container {
+  height:100%;
+
+}
+.header_container{
+  display: flex;
+  align-items: center;
+  padding:1.125rem 0;
+  box-shadow:2px 2px 4px rgba(0, 0, 0, 0.25);;
+
+}
+
+.header__pokeball__img{
+  height: 1.5rem;
+  width: 1.5rem;
+}
+.header_title{
+font-weight: bold;
+font-size: var(--font-size-xl);
+line-height: 2rem;
+}
+
+.searchbar_container{
+  display:flex;
+  align-items: center;
+  margin:2rem 0;
+  box-sizing: border-box;
+  border: 1px solid var(--light-gray);
+  border-radius: 0.5rem;
+ width: fit-content;
+}
+
+.searchbar_input{
+    border:none;
+justify-content: space-around;
+}
+
+.searchbar_img{
+
+}
+
 
 .card__container {
   display: flex;
@@ -118,10 +160,12 @@ body {
   font-size: var(--font-size-l);
 }
 .card__text__info {
+  padding: 0 1.25rem 0.5rem 1.25rem;
+
   font-weight: normal;
   font-size: var(--font-size-m);
   text-align: justify;
-  padding: 0 1.25rem 0.5rem 1.25rem;
+  line-height: 1rem;
 }
 .card__pokemon__features__container {
   display: flex;
@@ -156,8 +200,30 @@ body {
 }
 .card__feature__description__tag {
   text-align: center;
-    font-size: var(--font-size-m);
+  font-size: var(--font-size-m);
 
   color: var(--medium-gray);
 }
 
+
+.footer_container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap:1rem;
+  position: absolute;
+  padding:0.75rem 0rem;
+  bottom: 0;
+  width: 100%;
+  box-sizing: border-box;
+  border-top: 1px solid var(--light-gray);
+}
+
+.footer__github__img{
+  height: 1.5rem;
+  width: 1.5rem;
+}
+.footer__pokeapi__img{
+    height: 2.62rem;
+
+}
