--- a/pokedex-app/src/_styles/styles.css
+++ b/pokedex-app/src/_styles/styles.css
@@ -47,46 +47,44 @@ body {
   height: 100%;
 }
 .main_container {
-  height:100%;
-
+  height: 100%;
 }
-.header_container{
+.header_container {
   display: flex;
   align-items: center;
-  padding:1.125rem 0;
-  box-shadow:2px 2px 4px rgba(0, 0, 0, 0.25);;
-
+  padding: 1.125rem 0;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
-.header__pokeball__img{
+.header__pokeball__img {
   height: 1.5rem;
   width: 1.5rem;
 }
-.header_title{
-font-weight: bold;
-font-size: var(--font-size-xl);
-line-height: 2rem;
+.header_title {
+  font-weight: bold;
+  font-size: var(--font-size-xl);
+  line-height: 2rem;
 }
 
-.searchbar_container{
-  display:flex;
-  align-items: center;
-  margin:2rem 0;
+.searchbar_container {
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0;
   box-sizing: border-box;
+}
+.searchbar_container-center {
   border: 1px solid var(--light-gray);
   border-radius: 0.5rem;
 }
 
-
-.searchbar_input{
-border:none;
-width:100%;
-
+.searchbar_input {
+  /*Comprobar ancho*/
+  border: none;
 }
-.searchbar_input:focus{
-  outline:none;
+.searchbar_input:focus {
+  outline: none;
 }
-.searchbar_input_img{
+.searchbar_input_img {
   padding-left: 1rem;
 }
 
@@ -190,7 +188,6 @@ width:100%;
 .card__feature__weight_container {
   display: flex;
   align-items: center;
-  
 }
 .card__feature__weight_container > * {
   padding: 0 0.3rem;
@@ -207,25 +204,23 @@ width:100%;
   color: var(--medium-gray);
 }
 
-
-.footer_container{
+.footer_container {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap:1rem;
+  gap: 1rem;
   position: absolute;
-  padding:0.75rem 0rem;
+  padding: 0.75rem 0rem;
   bottom: 0;
   width: 100%;
   box-sizing: border-box;
   border-top: 1px solid var(--light-gray);
 }
 
-.footer__github__img{
+.footer__github__img {
   height: 1.5rem;
   width: 1.5rem;
 }
-.footer__pokeapi__img{
-    height: 2.62rem;
-
+.footer__pokeapi__img {
+  height: 2.62rem;
 }
