--- a/pokedex-app/src/_styles/styles.css
+++ b/pokedex-app/src/_styles/styles.css
@@ -88,6 +88,14 @@ body {
   padding-left: 1rem;
 }
 
+.cards__grid {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: auto auto auto;
+  row-gap: 50px;
+  column-gap: 50px;
+}
+
 .card__container {
   display: flex;
   flex-direction: column;
