Estilo input corregido

--- a/pokedex-app/src/_styles/styles.css
+++ b/pokedex-app/src/_styles/styles.css
@@ -82,9 +82,9 @@ body {
 }
 
 .searchbar_input {
-  /*Comprobar ancho*/
   border: none;
   margin-left: 1.5rem;
+  margin-right: 0.5rem;
 }
 .searchbar_input:focus {
   outline: none;
